# ton-sand

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
contracts/: sand.tolk  vladas_sand.tolk
sand/: Cargo.toml
scripts/: deploy.ts  deploySand.ts  deployVladasSand.ts  getCounter.ts  incrementSand.ts  resetSand.ts  sand.ts  sendIncrease.ts  sendReset.ts
tests/: FirstTest.spec.ts  Sand.spec.ts  VladasSand.spec.ts
wrappers/: Sand.compile.ts  Sand.ts  VladasSand.compile.ts  VladasSand.ts
