[workspace]

default-members = ["sand"]
members = ["sand"]

resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }
tonlib-client = "0.26"

[patch.crates-io]
#wgpu = { path = "../3/wgpu/wgpu" }
